--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg " style="background: #1e202b !important;">
         <div class="container">
-            <a class="navbar-brand d-flex flex-wrap m-3 ps-5" href="#"><img src="images/logo@2x.png" width="60"
+            <a class="navbar-brand d-flex flex-wrap m-3 ps-5" href="index.html"><img src="images/logo@2x.png" width="60"
                     height="40" alt="">
             </a>
             <div class="">
