--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
                 <h4 class="fs-5">weather</h4>
                 <div class="small ">tagline goes here</div>
             </div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -61,9 +61,9 @@
         </div>
 
         <div class="container mt-5 ">
-            <div class="row mt-5">
-                <div class="col-4 offset-1 rounded-2 " style="background-color: #262936;">
-                    <div style="margin-top: 60%;">
+            <div class="row ">
+                <div class="col-5 offset-1 rounded-2 h-50  " style="background-color: #262936; width: 40%;">
+                    <div style="margin-top: 50%; padding: 30px;" class="d-flex flex-column">
                         <p class="p-3"><img src="https://routeweather.netlify.app/images/icon-marker@2x.png"
                                 class=" me-2" style="width: 15px;"> Company
                             Name
@@ -73,11 +73,12 @@
                                 src="https://routeweather.netlify.app/images/icon-phone@2x.png" class=" me-2 "
                                 style="width: 20px;" alt=""> +1 800
                             314 235</a>
-                        <a class="text-white" href="#"><img src="images/icon-envelope.png" class=" me-2 "
-                                style="width: 20px;" alt="">contact@companyname.com</a>
+                        <a class="text-white mt-4" href="#"><img src="images/icon-envelope.png" style="width: 20px;"
+                                alt="">contact@
+                            companyname.com</a>
                     </div>
                 </div>
-                <div class="col-md-5 offset-1 ">
+                <div class="col-md-5  w-50 ">
                     <h2 class="section-title">Contact us</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi consectetur inventore ducimus,
                         facilis, numquam id soluta omnis eius recusandae nesciunt vero repellat harum cum. Nisi facilis
@@ -88,12 +89,12 @@
                             <div class="col-md-6"><input type="text" class="rounded-4" placeholder="Your name..."></div>
                             <div class="col-md-6"><input type="text" class="rounded-4" placeholder="Email Addresss...">
                             </div>
-                        </div>
+                        </div><br>
                         <div class="row">
                             <div class="col-md-6"><input type="text" class="rounded-4" placeholder="Company name...">
                             </div>
                             <div class="col-md-6"><input type="text" class="rounded-4" placeholder="Website..."></div>
-                        </div>
+                        </div><br>
                         <textarea name="" class="rounded-4 " placeholder="Message..."></textarea>
                         <div class="text-right">
                             <input type="submit"
